--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -20,11 +20,56 @@
     Votre don de sang de cordon servira <strong>uniquement</strong> pour un usage scientifique.
     </p>
     <h1>Que peut-on donner ?</h1>
+    <h2>Il est possible de donner deux éléments :</h2>
+    <p>lorsque le cordon est coupé, une ponction est réalisée dans la veine qui se trouve dans le cordon ombilical. 
+    Le sang de cordon est systématiquement utilisé pour produire des cellules souches hématopoïétiques, des cellules immunitaires, du sérum ou du plasma. Les cellules souches hématopoïétiques servent par exemple à tester des vaccins ou des biomédicaments (médicaments d’origine biologique) pour le traitement de cancers ou de maladies auto-immunes. Les cellules immunitaires sont une source de biomédicaments anti-tumoraux et le sérum placentaire, supplément indispensable dans les milieux de culture cellulaire, remplace le sérum d’origine animale.</p>
+    <button class="accordion"><p class="accordionTitle">Le cordon ombilical</p></button>
+    <div class="panel">
+        <p>
+        Le cordon ombilical permet d’isoler différents types de cellules telles que les cellules souches mésenchymateuses ou les cellules endothéliales . Les cellules souches mésenchymateuses sont utilisées pour le développement d’approches innovantes de thérapie cellulaire régénératrices, car elles jouent un rôle dans la réparation des tissus osseux, cartilagineux, adipeux ou musculaires. Les cellules endothéliales servent de modèle d’étude in vitro de néoangiogénèse (processus de création de vaisseaux sanguins impliqués par exemple dans l’alimentation des tumeurs), de cicatrisation ou de remodelage du tissu osseux.
+        </p>
+    </div>
+    <p>Le placenta est également une source de cellules souches mésenchymateuses.</p>
     <p>Faire schéma</p>
     <h1>Quel usage pour ce don ?</h1>
     <p>Le don de sang placentaire peut servir pour 2 usages :</p>
-    <h2>Faire schéma</h2>
-    <p>Il existe deux types de greffes :</p>
+    <h2>Un usage scientifique :</h2>
+    <div class="illustrated"><p><img class="illustrationLeft" src={{ asset ('img/scientifique.PNG')}}>Les cellules de sang de cordon sont des cellules précieuses pour la recherche. Elles peuvent faire avancer la recherche biomédicale, notamment dans les domaines de l’infectiologie, l’immunologie, l’hématologie, l’oncologie et de la thérapie cellulaire. Elles permettent également de contribuer à la recherche pour des traitements innovants.</p></div>
+    <p>Recherches appliquées :</p>
+    <div class="cardRecherche">
+        <div class="card">
+            <div class="card-title"><h2>Pathologies adultes :</h2></div>
+            <div class="contentCard">
+                <ul>
+                    <li>Maladies Inflammatoires Chroniques de l’Intestin</li>
+                    <li>Lymphome B</li>
+                    <li>Leucémie myéloïde</li>
+                    <li>Infection HIV</li>
+                    <li>Cancer de l'ovaire</li>
+                    <li>Cancer du sein </li>
+                    <li>Mélanome</li>
+                </ul>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-title"><h2>Pathologies pédiatriques :</h2></div>
+            <div class="contentCard">
+                <ul>
+                    <li>Maladies Inflammatoires</li>
+                    <li>Chroniques de l’Intestin (sujets jeunes / ado)</li>
+                    <li>Lymphome B</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <h2>Un usage thérapeutique </h2>
+    <div class="illustrated"><p><img class="illustrationLeft" src={{ asset ('img/therapeutique.PNG')}}><p>La greffe de sang placentaire consiste à greffer de nouvelles cellules souches hématopoïétiques dans le cas d’un patient atteint de certaines maladies du sang, tumorales (ex : leucémies) ou non (ex : déficits immunitaires d’origine génétique)
+    <br>
+    Ces cellules souches hématopoïétiques permettent de traiter des maladies immunes et dégénératives, des cancers et des maladies hématologiques (leucémies, lymphomes, myélomes…). Elles contribuent à la guérison du patient puisqu’elles vont remplacer ou réparer un tissu hématopoïétique naturellement déficient (ex : pour une aplasie médullaire) ou qui a été endommagé à la suite un lourd traitement (ex : chimiothérapie ou radiothérapie).
+    <br>
+    Celles-ci sont injectées dans la circulation sanguine du receveur et vont se diriger vers la moelle osseuse au sein de laquelle elles vont produire à nouveau les différents éléments du sang.
+    </p></div>
+    <h2>Il existe deux types de greffes :</h2>
     <button class="accordion"><p class="accordionTitle">L’autogreffe</p></button>
     <div class="panel">
         <p>Les cellules souches hématopoïétiques vont être prélevées et congelées dans des banques autologues afin d’être réinjectées par la suite en cas de besoin. Cet acte est interdit en France et ne montre pas grande utilité puisque la réaction immunitaire potentielle appelée « effet de greffon » déclenchée par les lymphocytes T  du greffon lorsqu’ils reconnaissent et attaquent les cellules malignes sont beaucoup plus faibles.</p>
