--- a/templates/pages/Pourquoi.html.twig
+++ b/templates/pages/Pourquoi.html.twig
@@ -15,19 +15,19 @@
     <h1>Pourquoi faire un don de sang de cordon ?</h1>
     <button class="accordion"><p class="accordionTitle">1.  Sauver des vies</p></button>
     <div class="panel">
-        <p>Grâce à votre don de sang de cordon, des traitements innovants peuvent être mis en place afin d’aider les personnes malades, ainsi faire un don de sang de cordon c’est aussi redonné de l’espoir aux personnes atteintes de maladies graves. On compte environ 2000 personnes qui ont besoin d’une greffe de cellules souches hématopoïétiques en France chaque année. </p>
+        <img class="illustrationAccordeon" src={{ asset ('img/Vie.PNG')}}><p>Grâce à votre don de sang de cordon, des traitements innovants peuvent être mis en place afin d’aider les personnes malades, ainsi faire un don de sang de cordon c’est aussi redonné de l’espoir aux personnes atteintes de maladies graves. On compte environ 2000 personnes qui ont besoin d’une greffe de cellules souches hématopoïétiques en France chaque année. </p>
     </div>
 
     <button class="accordion"><p class="accordionTitle">2.	Aider la recherche</p></button>
     <div class="panel">
-        <img class="illustrationAccordeon" src={{ asset ('img/test_labo.jpeg')}}><p>Les cellules souches prélevées dans le sang de cordon vont permettent de développer des activités scientifiques de recherche dans le domaine des cancers du sang et de la thérapie génique. Ainsi grâce à votre don de sang de cordon, les chercheurs peuvent mettre en place des traitements innovants. Lien renvoyant à onglet : Qu’est-ce que le don de sang de cordon « usage scientifique ».
+        <img class="illustrationAccordeon" src={{ asset ('img/Science.PNG')}}><p>Les cellules souches prélevées dans le sang de cordon vont permettent de développer des activités scientifiques de recherche dans le domaine des cancers du sang et de la thérapie génique. Ainsi grâce à votre don de sang de cordon, les chercheurs peuvent mettre en place des traitements innovants. Lien renvoyant à onglet : Qu’est-ce que le don de sang de cordon « usage scientifique ».
 
         Grâce à votre don, on peut produire d’autres types de cellules sanguines ou du sérum ou du plasma. Le cordon ombilical peut être également utilisé pour produire différents types de cellules comme les cellules souches mésenchymateuses, ou les cellules endothéliales par exemple.</p>
     </div>
 
     <button class="accordion"><p class="accordionTitle">3.	Une action responsable et solidaire</p></button>
     <div class="panel">
-        <p>L’acte de donner son sang de cordon est un acte citoyen, généreux, solidaire, et important qui peut aider de nombreuses personnes dans le besoin. Cette expérience riche s’inscrit dans une dynamique de partage tant pour le donneur que pour le receveur.</p>
+        <img class="illustrationAccordeon" src={{ asset ('img/Solidarité.PNG')}}><p>L’acte de donner son sang de cordon est un acte citoyen, généreux, solidaire, et important qui peut aider de nombreuses personnes dans le besoin. Cette expérience riche s’inscrit dans une dynamique de partage tant pour le donneur que pour le receveur.</p>
     </div>
 
     <div class="cadre">
