--- a/templates/admin/faqs/ShowFaq.html.twig
+++ b/templates/admin/faqs/ShowFaq.html.twig
@@ -1,7 +1,7 @@
 
 {% extends "admin/admin.html.twig" %}
 
-{% block title %}Gestion des témoignages{% endblock %}
+{% block title %}Gestion de la foire aux questions{% endblock %}
 
 {% block stylesheets %}{% endblock %}
 
