--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,11 +32,11 @@
             </label>
                 <ul class="menuItems">
                     
-                    <li><a href={{path ('cestquoi')}}>Qu'est ce que le don ?</a></li>
+                    <li><a href={{path ('cestquoi')}}>Qu'est-ce que le don ?</a></li>
                     <li><a href={{path ('pourquoi')}}>Pourquoi ?</a></li>
                     <li><a href={{path ('comment')}}>Comment ?</a></li>
                     <li><a href={{path ('quand')}}> Quand ?</a></li>
-                    <li><a href="#">Où ?</a></li>
+                    <li><a href={{path ('ou')}}>Où ?</a></li>
                     <li><a href={{path ('faq')}}>FAQ</a></li>
                 </ul>
             </nav>
