--- a/templates/pages/Pourquoi.html.twig
+++ b/templates/pages/Pourquoi.html.twig
@@ -40,7 +40,7 @@
 
     <h1>Les principes du don de sang de cordon</h1>
     <h2>Un acte bénévole et solidaire</h2>
-    <p>Votre don de sang de cordon peut sauver des vies et redonner espoir au personnes atteintes de maladies graves. Vous êtes libre de réaliser ou non ce don. C’est un acte bénévole, aucune indemnité ni compensation financière ne vous sera versées. Si vous acceptez le principe, vous pourrez alors en discuter avec une personne du corps médical de votre choix afin d’avoir toutes les explications que vous désirez. A la suite de de cet entretien, une fiche informative vous sera remise ainsi que le document de consentement.</p>
+    <div class="illustrated"><p><img class="illustrationLeftIcon" src={{ asset ('img/solidaire-removebg-preview.PNG')}}><p>Votre don de sang de cordon peut sauver des vies et redonner espoir au personnes atteintes de maladies graves. Vous êtes libre de réaliser ou non ce don. C’est un acte bénévole, aucune indemnité ni compensation financière ne vous sera versées. Si vous acceptez le principe, vous pourrez alors en discuter avec une personne du corps médical de votre choix afin d’avoir toutes les explications que vous désirez. A la suite de de cet entretien, une fiche informative vous sera remise ainsi que le document de consentement.</p></div>
     <h2>Un acte anonyme</h2>
     <p>Lorsque le prélèvement sera effectué, il sera envoyé à l’EFS qui se chargera de l’anonymisation avant de le céder à LYMPHOBANK, ainsi LYMPHOBANK n’aura en aucun cas accès aux données identifiantes vous concernant ou concernant votre enfant, qu’il s’agisse de données directement identifiantes (nom, prénom, coordonnées…) ou indirectement identifiantes (date de naissance, sexe, groupe sanguin…)</p>
     <h2>Un acte gratuit</h2>
