--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -54,8 +54,8 @@
                             </h2>
                             <div id="flush-collapseUser" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body">
-                                <a href="#" class="nav-link"><i class="fas fa-user-shield"></i>Qu'est-ce que le don ?</a>
-                                <a href="#" class="nav-link"><i class="fas fa-tint"></i>Donneurs</a>  
+                                <a href="#" class="nav-link">Qu'est-ce que le don ?</a>
+                                <a href="#" class="nav-link">Pourquoi ?</a>  
                             </div>
                         </div>    
                     </div>
