--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block body %}
-    <p class="pageTitle">Le sang de cordon provient du placenta (d’où l’appellation également rencontrée « sang placentaire »). Le cordon ombilical contient un sang particulièrement riche en <span class="tooltip">cellules souches hématopoïétiques <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br>
+    <p class="pageTitle">Le sang de cordon provient du placenta (d’où l’appellation également rencontrée « sang placentaire »). Le cordon ombilical contient un sang particulièrement riche en cellules souches<span class="tooltip"> hématopoïétiques <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br>
     -  Globules rouges : transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
     <br>
     -  Globules blancs : assurent la défense du corps contre les virus et les bactéries 
@@ -35,7 +35,7 @@
     <p>Le don de sang placentaire peut servir pour 2 usages :</p>
     <h2>Un usage scientifique :</h2>
     <div class="illustrated"><p><img class="illustrationLeft" src={{ asset ('img/scientifique.PNG')}}>Les cellules de sang de cordon sont des cellules précieuses pour la recherche. Elles peuvent faire avancer la recherche biomédicale, notamment dans les domaines de l’infectiologie, l’immunologie, l’hématologie, l’oncologie et de la thérapie cellulaire. Elles permettent également de contribuer à la recherche pour des traitements innovants.</p></div>
-    <p>Recherches appliquées :</p>
+    <p id="cardsRechercheTitle">Recherches appliquées :</p>
     <div class="cardRecherche">
         <div class="card">
             <div class="card-title"><h2>Pathologies adultes :</h2></div>
