--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -26,10 +26,18 @@
             {% endif %}
             
 
-            <form action={{path('login')}} method="post">
-                <input type="text" id="username" name="_username" class="input" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" value={{lastUsername}}>
+            <form action={{path('login')}} method="post" autocomplete="off">
 
-                <input type="password" class="input" name="_password" placeholder="Password" aria-label="Username" aria-describedby="basic-addon1">
+                <label class="input">
+                    <input type="text" id="username" name="_username" class="input__field" placeholder=" " aria-label="Username" aria-describedby="basic-addon1" value={{lastUsername}}>
+                    <span class="input__label">Identifiant</span>
+                </label>
+                
+                <label class="input">
+                    <input type="password" class="input__field" name="_password" placeholder=" " aria-label="Username" aria-describedby="basic-addon1">
+                    <span class="input__label">Password</span>
+                </label>
+                
 
                 <button class="btn" type="submit" class="btn btn-primary">S'authentifier</button>
             </form>
