--- a/assets/styles/login.scss
+++ b/assets/styles/login.scss
@@ -24,13 +24,9 @@ body{
 }
 
 .log{
-  min-height: 0;
-  height: 400px;
-  width: 400px;
+  height: 100%;
+  width: 100%;
   background-color: $pastel;
-  box-shadow: 5px 5px 6px rgba(0,0,0,0.2);
-  border: 4px solid black;
-  border-radius: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -39,8 +35,10 @@ body{
   .logTitle{
     h2{
       font-family: 'Karla', sans-serif;
-      font-size: 2em;
+      font-size: 2.5em;
       margin-top: 1em;
+      font-weight: bold;
+      color: $fond;
     }
   }
 
@@ -49,9 +47,50 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    .input{
-      margin: 1em 0;
+    .input {
+      position: relative;
       font-family: 'Hind Siliguri', sans-serif;
+      margin: 1em 0;
+    
+      &__label {
+        position: absolute;
+        left: 0;
+        top: 0;
+        padding: calc(.5em * 0.75) calc(.5em * .5);
+        margin: calc(.5em * 0.75 + 3px) calc(.5em * .5);
+        white-space: nowrap;
+        transform: translate(0, 0);
+        transform-origin: 0 0;
+        background: $pastel;
+        transition: transform 120ms ease-in;
+        font-weight: bold;
+        line-height: 1;
+      }
+      &__field {
+        box-sizing: border-box;
+        display: block;
+        width: 100%;
+        border: 3px solid currentColor;
+        padding: calc(.5em * 1.5) .5em;
+        color: currentColor;
+        background: transparent;
+        border-radius: 5px;
+        
+        &:focus,
+        &:not(:placeholder-shown) {
+          & + .input__label {
+            transform: translate(.25rem, -65%) scale(.8);
+            color: black;
+          }
+        }
+      }
+    }
+
+    .input:focus{
+      background: $pastel;
+    }
+    .input:focus-visible{
+      outline: none !important;
     }
   }
   .contentLog{
@@ -85,5 +124,18 @@ body{
   
   .btn:hover{
     box-shadow: inset 2px 4px 3px rgba(0, 0, 0, 0.1);
+  }
+}
+
+
+//responsive
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+  .log{
+    height: 400px;
+    width: 400px;
+    box-shadow: 5px 5px 6px rgba(0,0,0,0.2);
+    border: 4px solid black;
+    border-radius: 15px;
   }
 }
