--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -15,6 +15,7 @@ html, body{
   width: 100%;
   background-color: $fond;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 // cadrillage page
@@ -420,7 +421,7 @@ p.accordionTitle{
   padding: 0;
   padding-left: 20px;
   margin-bottom: 2em;
-  background-color: $fond;
+  background-color: transparent;
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.35s ease-out;
@@ -448,6 +449,7 @@ p.accordionTitle{
   right: 0px;
   top: 0px;
   bottom: 0px;
+  clip-path: polygon(0 0,2% 0, 1% 92%, 100% 92%, 100% 100%,0 100%);
 }
 
 
@@ -569,6 +571,27 @@ p.accordionTitle{
 /* Show the tooltip text when you mouse over the tooltip container */
 .tooltip:hover .tooltipText {
   transform: scaleX(100%);
+}
+
+
+//go to top btn
+.gotoTop{
+  position: fixed;
+  right: 6%;
+  bottom: 2em;
+  transform: translateX(50%);
+  .linktoTop{
+    .btntoTop{
+      outline: none;
+      background: transparent;
+      color: $pastel;
+      border: none;
+      cursor: pointer;
+    }
+    .btntoTop:hover{
+      color: $pastelHover;
+    }
+  }
 }
 
 
@@ -746,10 +769,17 @@ p.accordionTitle{
     display: none;
   }
 
+  //header
+  .header{
+    position: sticky;
+    top: -90px;
+  }
+
   .navbar{
-    position: relative;
+    position: sticky;
+    top: -80px;
     width: 100%;
-    height: 100%;
+    height: 150px;
     z-index: 0;
     .network{
       display: block;
@@ -805,6 +835,7 @@ p.accordionTitle{
           height: 3px;
           position: absolute;
           background:$fond;
+          border-radius: 0;
           bottom: 0;
           top: auto;
           left: 0;
