--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -1,4 +1,14 @@
 $pastel : #cec0d6;
-
+$pastelHover : #b499c3;
 $fond :#fffdf0;
 
+
+.homeBanner{
+    margin: 0 -12vw;
+    margin-top: -32px;
+    .banner{
+        width: 100%;
+        height: 250px;
+        object-fit: cover;
+    }
+}
