--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -10,9 +10,9 @@
 
 {% block body %}
     
-    <h1>Lorem ipsum dolor sit amet</h1>
-
-    <h2>Lorem ipsum dolor sit amet</h2>
+    <div class="homeBanner">
+        <img class="banner" src={{ asset ('img/home/homeBanner.jpeg')}}>
+    </div>
 
     <div class="illustrated"><p><img class="illustrationLeft" src={{ asset ('img/test_labo.jpeg')}}>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur</p></div>
 
