--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -81,7 +81,7 @@
     <div class="cardsHosto">
         <div class="card">
             <div class="card-pic">
-                <img src={{ asset ('img/hospital.png')}}>
+                <img src={{ asset ('img/icons/hospital.png')}}>
             </div>
             <div class="card-title"><h2>Maternité qui ne prélève pas de SDC</h2></div>
             <button class="btnCard"><p>En savoir plus</p></button>
@@ -91,7 +91,7 @@
         </div>
         <div class="card">
             <div class="card-pic">
-                <img src={{ asset ('img/hospital.png')}}>
+                <img src={{ asset ('img/icons/hospital.png')}}>
             </div>
             <div class="card-title"><h2>Maternité qui prélève le SDC pour usage thérapeutique</h2></div>
             <button class="btnCard"><p>En savoir plus</p></button>
@@ -101,7 +101,7 @@
         </div>
         <div class="card">
             <div class="card-pic">
-                <img src={{ asset ('img/hospital.png')}}>
+                <img src={{ asset ('img/icons/hospital.png')}}>
             </div>
             <div class="card-title"><h2>Maternité qui prélève le SDC pour usage scientifique </h2></div>
             <button class="btnCard"><p>En savoir plus</p></button>
