--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -14,31 +14,52 @@
         <img class="banner" src={{ asset ('img/home/homeBanner.jpeg')}}>
     </div>
 
-    <div class="illustrated"><p><img class="illustrationLeft" src={{ asset ('img/test_labo.jpeg')}}>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur</p></div>
+    <h1 class="homeTitle">Sauvez des vies ou aidez la recherche avec votre don de sang placentaire.</h1>
+    <h2 class="homeText">Lors de votre accouchement, faites le choix de faire un
+    don de sang de cordon pour un usage thérapeutique ou
+    scientifique.</h2>
 
-    <button class="accordion"><p class="accordionTitle">Lorem ipsum dolor sit amet</p></button>
-    <div class="panel">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <div class="cadre">
+        <h2 class="underline">Donner pour Lymphobank, c'est GÉANT !</h2>
+        <div class="schemaGeant">
+            <div class="geantLetter">
+                <h2>Gratuit</h2>
+                <img id="pregnantIcon" class="icon" src={{ asset ('img/icons/pregnant.png')}}>
+            </div>
+            <i class="fas fa-long-arrow-alt-right fa-4x"></i>
+            <div class="geantLetter">
+                <h2>Ethique</h2>
+                <img class="icon" src={{ asset ('img/icons/hospital.png')}}>
+            </div>
+            <i class="fas fa-long-arrow-alt-right fa-4x"></i>
+            <div class="geantLetter">
+                <h2>Anonyme</h2>
+                <img class="icon" src={{ asset ('img/icons/centre-medical.png')}}>
+            </div>
+            <i class="fas fa-long-arrow-alt-right fa-4x"></i>
+            <div class="geantLetter">
+                <h2>Non-profit </h2>
+                <img class="icon" src={{ asset ('img/icons/centre-medical.png')}}>
+            </div>
+            <i class="fas fa-long-arrow-alt-right fa-4x"></i>
+            <div class="geantLetter">
+                <h2>Transparent</h2>
+                <img class="icon" src={{ asset ('img/icons/biology.png')}}>
+            </div>
+        </div>
     </div>
 
-    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>Lymphobank est une biotech qui a vocation à fournir des cellules sanguines adultes et
+    placentaires à usage de recherche et des prestations de services en immunothérapie
+    cellulaire.</p>
 
-    <h2>Lorem ipsum dolor sit amet</h2>
+    <h2 class="underline">Réseau de maternités de Lymphobank :</h2>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <div>Icônes conçues par <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/fr/" title="Flaticon">www.flaticon.com</a></div>
+    <div>Icons made by <a href="https://www.flaticon.com/authors/icongeek26" title="Icongeek26">Icongeek26</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+    <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+    <div>Icons made by <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp">Eucalyp</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 
-    <button class="accordion"><p class="accordionTitle">Section 2</p></button>
-    <div class="panel">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </div>
-
-    <button class="accordion"><p class="accordionTitle">Section 3</p></button>
-    <div class="panel">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-
-                
-                
                 
 {% endblock %}
 
