--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -17,11 +17,9 @@ $fond :#fffdf0;
     margin-top: 2em;
     text-align: center;
     font-weight: bold;
-    text-decoration: underline $pastel 4px solid;
 }
 
 .underline{
-    text-decoration: underline $pastel 3px solid;
     text-align: center;
 }
 
@@ -41,10 +39,34 @@ $fond :#fffdf0;
         }
         h2{
             margin-top: 0;
+            .underline{
+                text-decoration: underline $pastel 5px solid;
+                display: inline;
+                font-weight: bold;
+                font-size: 1.5em;
+            }
         }
         i{
             transform: translateY(28.8px);
         }
+        .tooltipGeant .tooltipGeantText {
+            visibility: hidden;
+            width: 120px;
+            background-color: black;
+            color: #fff;
+            text-align: center;
+            padding: 5px 0;
+            border-radius: 6px;
+           
+            /* Position the tooltip text - see examples below! */
+            position: absolute;
+            z-index: 1;
+          }
+          
+          /* Show the tooltip text when you mouse over the tooltip container */
+          .tooltipGeant:hover .tooltipGeantText {
+            visibility: visible;
+          }
     }
 }
 
