--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -23,27 +23,32 @@
         <h2 class="underline">Donner pour Lymphobank, c'est GÉANT !</h2>
         <div class="schemaGeant">
             <div class="geantLetter">
-                <h2>Gratuit</h2>
+                <h2><div class="underline">G</div>ratuit</h2>
                 <img id="pregnantIcon" class="icon" src={{ asset ('img/icons/pregnant.png')}}>
             </div>
             <i class="fas fa-long-arrow-alt-right fa-4x"></i>
             <div class="geantLetter">
-                <h2>Ethique</h2>
+                <h2><div class="underline">E</div>thique</h2>
                 <img class="icon" src={{ asset ('img/icons/hospital.png')}}>
             </div>
             <i class="fas fa-long-arrow-alt-right fa-4x"></i>
             <div class="geantLetter">
-                <h2>Anonyme</h2>
-                <img class="icon" src={{ asset ('img/icons/centre-medical.png')}}>
+                <h2><div class="underline">A</div>nonyme</h2>
+                <img class="icon" src={{ asset ('img/icons/EFSlogo.png')}}>
             </div>
             <i class="fas fa-long-arrow-alt-right fa-4x"></i>
             <div class="geantLetter">
-                <h2>Non-profit </h2>
-                <img class="icon" src={{ asset ('img/icons/centre-medical.png')}}>
+                <h2><div class="underline">N</div>on-profit </h2>
+                <div class="tooltipGeant">
+                    <img class="icon" src={{ asset ('img/icons/centre-medical.png')}}>
+                    <span class="tooltipGeantText">Lymphobank est surveillé par un comité de surveillance
+                    et par le ministère de la santé.
+                    </span>
+                </div>
             </div>
             <i class="fas fa-long-arrow-alt-right fa-4x"></i>
             <div class="geantLetter">
-                <h2>Transparent</h2>
+                <h2><div class="underline">T</div>ransparent</h2>
                 <img class="icon" src={{ asset ('img/icons/biology.png')}}>
             </div>
         </div>
